# hfann

./: .gitignore  LICENSE  README.md  hfann.cabal
examples/: And.hs  AndExplicitTrain.hs  AndTest.hs  AndTrain.hs  and.data
src/AI/: Fann.hs
src/AI/Fann/: FannCtx.hsc  Glue.c  Glue.hs  Types.hs  Types.hsc  fannwrap.h
