name:                hfann
version:             0.1.0.0
synopsis:            Haskell bindings to the FANN library
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/hfann#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2016 Patrik Sandahl
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AI.Fann
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , inline-c
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/hfann
