name:                hfann
version:             0.1.0.0
synopsis:            Haskell bindings to the FANN library
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/hfann#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2016 Patrik Sandahl
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/hfann

library
  hs-source-dirs:      src
  exposed-modules:     AI.Fann
  other-modules:       AI.Fann.Glue
                       AI.Fann.Types
  c-sources:           src/AI/Fann/Glue.c
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , inline-c
                     , template-haskell
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
  cc-options:          -Wall -Werror -O2
  include-dirs:        /home/patrik/repos/hfann/src/AI/Fann

 -- Examples
executable and-train
  hs-source-dirs:      examples
  main-is:             AndTrain.hs
  build-depends:       base >= 4.7 && < 5
                     , hfann
  default-language:    Haskell2010
  ghc-options:         -Wall
  extra-libraries:     fann

executable and-test
  hs-source-dirs:      examples
  main-is:             AndTest.hs
  build-depends:       base >= 4.7 && < 5
                     , hfann
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
  extra-libraries:     fann
